Reorganizing for different view types

--- a/mithril/index.html
+++ b/mithril/index.html
@@ -16,412 +16,30 @@
 </head>
 <body>
 <div id="headers"></div>
-
-
-
-<div id="app">
-
+<div id="app"></div>
+<hr />
+<div id="footer" class="text-muted">
+    Built by COS
 </div>
-
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="../js/bootstrap.min.js"></script>
-<script src="knockout-3.1.0.js"></script>
-<script src="mithril.js"></script>
-<script src="modules/app.js"></script>
-<script src="modules/logs.js"></script>
-<script src="modules/wiki.js"></script>
-<script src="modules/comments.js"></script>
+<script src="lib/knockout-3.1.0.js"></script>
+<script src="lib/mithril.js"></script>
+<script src="header/viewmodel.js"></script>
+<script src="logs/logs.js"></script>
+<script src="wiki/viewmodel.js"></script>
+<script src="comments/viewmodel.js"></script>
 
 <script type="text/javascript">
 (function(){
-"use strict";
-
-//    /***************   APP   **************************/
-//    // App module  -- Sets global app variables and settings, does not generate views
-//    // Define module :
-//    var App = {};
-//    // Load information from server that will be the same for all apps
-//    App.info = m.request({method: "GET", url: "../app.json"});
-//    // Define information for this app only
-//    App.script = m.prop({
-//        title : "Mithril",
-//        url : "http://lhorie.github.io/mithril/"
-//    });
-//    App.pageInfo = function(data){
-//        this.title = m.prop(data.title);
-//        this.active = m.prop(data.active);
-//        this.desc = m.prop(data.desc);
-//        this.html = m.prop(data.html);
-//    }
-
-
-
-    var appKO = new AppViewModel();
-    var logsKO = new LogViewModel();
-    var wikiKO = new WikiViewModel();
-    var commentsKO = new CommentViewModel();
-
-    /***************   TEMPLATE MODULES   **************************/
-    // Quick modules for mainly view purposes. These are built to mimic templates, they get reused for each page
-
-    // Navigation bar with pages
-    var headers = {
-        controller : function(){
-           var self = this;
-           this.app  = appKO;
-           this.postRender = function(element, isInitialized, context){
-               if(!isInitialized){
-                   ko.applyBindings(self.app, document.getElementById("headers"))
-               }
-           }
-        },
-        view : function(ctrl){
-            return [
-                [
-                    m("nav.navbar.navbar-default.navbar-static-top[role='navigation']", { config : ctrl.postRender} , [
-                        m(".container", [
-                            m(".collapse.navbar-collapse[id='bs-example-navbar-collapse-1']", [
-                                m("ul.nav.navbar-nav[data-bind='foreach: listPages']", [
-                                    m("li[data-bind='attr : { class : active}']", [m("a[data-bind='attr : { href : href}, text : title ']")])
-                                ]),
-                                m("ul.nav.navbar-nav.navbar-right", [
-                                    m("li", ["You are logged in as ",m("span[data-bind='text: appInfo().appUser']", " ")," "])
-                                ])
-                            ])
-                        ])
-                    ]),
-                    m(".jumbotron.app-jumbotron", [
-                        m(".container", [
-                            m("[data-bind='visible: isHome']", [
-                                m("h2", [m("span[data-bind='text : appInfo().appTitle']")," with  ",m("span[data-bind='text: script.title']", " ")]),
-                                m("p[data-bind='text : appInfo().appDesc']"),
-                                m("p", [m("a.btn.btn-primary.btn-lg[data-bind='attr : {href : script.url}'][role='button']", ["Learn more about ",m("span[data-bind='text: script.title']")])])
-                            ]),
-                            m("[data-bind='visible: !isHome']", [
-                                m("h2[data-bind='text: ']", "{{currentPage.title}}  "),
-                                m("p", "\n                    {{currentPage.desc}}\n                ")
-                            ])
-                        ])
-                    ])
-                ]
-            ]
-        }
-    }
-
-    // Page footer
-    var footer = {
-        controller : function () {
-
-        },
-        view : function (ctrl){
-            return [
-                    m("hr"),
-                    m("div.text-muted", "Built by COS")
-                    ]
-        }
-    }
-
-    /***************   HOME PAGE MODULES   **************************/
-    /* Wiki Module  */
-    var wiki = {};
-
-    // an example of loading into a Model
-
-    // Long way of binding the data to view
-    wiki.controller = function(){
-        var self = this;
-        self.wiki = wikiKO;
-        self.wikiContent = m.prop({});
-        var addData = function(){
-            console.log(self.wiki.wikiData());
-            self.wiki.wikiData(new self.wiki.WikiModel(self.wikiContent()));
-        }
-
-        m.request({method: "GET", url: "../wiki.json"}).then(self.wikiContent).then(addData);
-
-        this.postRender = function(element, isInitialized, context){
-            if(!isInitialized){
-                ko.applyBindings(self.wiki, document.getElementById("cm-wiki"))
-            }
-        }
-
-    }
-
-    // Wiki html
-    wiki.view = function (controller) {
-        return [
-            [m(".panel.panel-default", { config: controller.postRender }, [
-                m(".panel-heading", [
-                    m(".row", [
-                        m(".col-md-9", [
-                            m("[data-bind='visible: !editMode()']", [" ",m("h2.panel-title[data-bind='text: wikiData().title']")," "]),
-                            m("[data-bind='visible: editMode']", [
-                                " ",
-                                m("input.form-control[data-bind='value: wikiData().title']")
-                            ])
-                        ]),
-                        m(".col-md-3.cm-wikiBar", [
-                            m(".btn-group", [
-                                m("button.btn.btn-sm.btn-default[data-bind='css: {active : editMode }, click : editToggle'][type='button']", "Edit"),
-                                m("button.btn.btn-sm.btn-default[data-bind='css: {active : !editMode() }, click : editToggle'][type='button']", "Preview")
-                            ])
-                        ])
-                    ])
-                ]),
-                m(".panel-body", [
-                    m("[data-bind='visible: !editMode(), text : wikiData().content']", " "),
-                    m("[data-bind='visible: editMode']", [" ",m("textarea.cm-box[data-bind='value: wikiData().content']", [
-
-                    ])," "])
-                ]),
-                m(".panel-footer", ["Wiki Version: ",m("span[data-bind='text: wikiData().version']")])
-            ])]
-        ]
-    };
-
-
-    /* Logs Module  */
-    var logs = {};
-
-    // Assign model directly to loaded content
-    logs.List =  m.request({method: "GET", url: "../logs.json"});
-
-    // Model for individual logs
-    logs.singleLog = function(logType, logContent){
-        this.logText = "";
-        switch(logType){
-            case "comment" :
-               this.logText =  " commented ";
-                break;
-            case "wiki" :
-                this.logText = " changed wiki to version ";
-                break;
-        }
-        this.logUser = App.info().appUser;
-        this.logUserID = App.info().appUserID;;
-        this.logDate = new Date();
-        this.logContent = logContent;
-    }
-
-    // Log actions, add log
-    logs.controller = function(){
-        // This example is not using the m.prop getter and setter since direct javascript makes more sense for one time log writing.
-        // Add log -- This gets fired in the controller when comment is being added. Will implement for wiki as well.
-        this.add = function(logType) {
-            if (logType) {
-                logs.List.push(new logs.singleLog(logType));
-            }
-        }.bind(this);
-
-    }
-
-    // Log layout, loads directly from the model, not through the controller.
-    logs.view = function(controller){
-        return [
-            m("h4", "Activity Log "),
-            m("table.table.table-condensed", [
-                m("tbody", [
-                        logs.List().map(function(log, index){
-                            return m("tr", [
-                                m("td", [
-                                    m("span.text-muted", log.logDate)
-                                ]),
-                                m("td", [
-                                    m("a[href='user/1']", log.logUser),
-                                    " ",
-                                    m("span.logText", log.logText),
-                                    m("i", log.logContent),
-                                    ".\n                        "
-                                ])
-                            ])
-                        })
-
-                ])
-            ])
-        ]
-    }
-
-    /* Comment Module */
-    var comments = {};
-
-    // Load existing comments from server
-    comments.List = m.request({method: "GET", url: "../comments.json"});
-
-    // Comment Model, uses information from the App about User.
-    comments.comment = function(content){
-           this.userid = App.info().appUserID;
-           this.username = App.info().appUser;
-           this.content = content;
-           this.date = new Date();
-    }
-
-    comments.controller = function (){
-        // Filter search term to use for filtering later.
-        this.filterText = m.prop("");
-
-        // Declare and empty setter for content of the comment to bind it to the form.
-        this.content = m.prop("");
-
-        // add comment
-        this.add = function () {
-            if(this.content()){
-                // New comment
-                comments.List().push(new comments.comment(this.content()));
-                // Log this behavior by adding a new Log model
-                logs.List().push(new logs.singleLog("comment", this.content()));
-                // Reset the form for new comments.
-                this.content("");
-            }
-        }.bind(this);
-
-        // filtering
-        // Get the text
-        // Go through each comment
-        // Compare text
-        // If found, add to comment an attribute called cmshow
-        // If not found, add to the comment and attribute called cmhide
-        this.filter = function (){
-            var result;
-            if(this.filterText()){
-                comments.List().map(function(comment, index){
-                    result = comment.content.indexOf(this.filterText());
-
-                    if(result !== -1){
-                        comment.show = "tableshow";
-                    } else {
-                        comment.show = "cmhide"
-                    }
-                }.bind(this));
-            } else {
-                comments.List().map(function(comment, index){
-                        comment.show = "tableshow";
-                }.bind(this));
-            }
-            console.log('Filter text', this.filterText());
-
-        }.bind(this);
-
-        this.test = function(e){
-            m.withAttr("value", this.filterText)(e);
-            this.filter();
-        }.bind(this);
-    }
-
-    // Loads commenting form and list of comments
-    comments.view = function(ctrl){
-        return [" ",m(".row", [
-            m(".col-sm-8.col-xs-12", [
-                m(".col-xs-12[id='cm-comment']", [
-                    m(".row", [
-                        m(".col-xs-8", [
-                            m("h4", "Comments")
-                        ]),
-                        m(".col-xs-4", [
-                            m("input.form-control.input-sm[placeholder='filter'][type='text']", { onkeyup: ctrl.test, value : ctrl.filterText()} )
-                        ])
-                    ]),
-                    m("hr"),
-                    m("[id='cm-boxWrapper']", [
-                        m(".row", [
-                            m(".col-xs-9", [
-                                m("textarea.cm-box", {onchange: m.withAttr("value", ctrl.content), value: ctrl.content()})
-                            ]),
-                            m(".col-xs-3", [
-                                m("button.btn.btn-default.btn-block.btn-lg", {onclick: ctrl.add}, " Add ")
-                            ])
-                        ]),
-                        m(".row", [
-                            m(".col-xs-12[id='cm-commentList']", [
-                                m("table.table.table-condensed", [
-                                    m("tbody", [
-                                        comments.List().map(function(comment, index){
-                                            return m("tr",{ class : comment.show }, [
-                                                m("td", [
-                                                    m("b", comment.username)
-                                                ]),
-                                                m("td", comment.content),
-                                                m("td", [
-                                                    m("span.text-muted", comment.date)
-                                                ])
-                                            ])
-
-                                        })
-
-                                    ])
-                                ])
-                            ])
-                        ])
-                    ])
-                ])
-            ]),
-            m(".col-sm-4.col-xs-12", [
-                m("[id='cm-logs']", [
-
-                ])
-            ])
-        ])]
-    }
-
-
-
-
-
-
-
-    /***************   ROUTING AND PAGES **************************/
-    // Simple About page, uses the page components as templates.
-    var about = {};
-    about.controller = function(){
-        this.pageInfo = new App.pageInfo({title : "About Us", active : "about", desc : "Learn more about us.", html : function(){return ""; }});
-        this.navControl = new navbar.controller(this.pageInfo.active());
-        this.headerControl = new header.controller(this.pageInfo);
-    }
-    about.view = function(controller){
-            return [
-                navbar.view(controller.navControl),
-                header.view(controller.headerControl),
-                m("div.container", [
-                    m("div", "More about the about page."),
-                    footer.view()
-                ])
-            ];
-    }
-
-
-
-    // Home page
-    var home = {};
-    home.controller = function(){
-        //this.pageInfo = new App.pageInfo({title : "Framework Application", active : "home", desc : "This page is built with Mithril.js. ", html : function(){ return m("a.btn.btn-info[href='http://lhorie.github.io/mithril/']", "Learn More"); }});
-        //this.navControl = new navbar.controller(this.pageInfo.active());
-        m.module(document.getElementById("headers"), headers);
-
-        this.wikiControl = new wiki.controller();
-        this.logsControl = new logs.controller();
-        this.commentsControl = new comments.controller();
-
-    }
-    home.view = function (ctrl){
-        return [
-            m("div.container", [
-                m("div.row", [
-                    m("div.col-md-8#cm-wiki", wiki.view(ctrl.wikiControl)),
-                    m("div.col-md-4#cm-logs", logs.view(ctrl.logsControl))
-                ]),
-                comments.view(ctrl.commentsControl),
-                footer.view()
-            ])
-        ];
-    }
 
     /* Route - Initializes the app */
     m.route(document.getElementById("app"), "/", {
         "/": home,
         "/about" : about
     });
-
 
 
 }());
