--- a/index_theme.html
+++ b/index_theme.html
@@ -136,6 +136,6 @@
 <script src="https://code.jquery.com/jquery.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
-<script src="mithril/mithril.js"></script>
+<script src="mithril/lib/mithril.js"></script>
 </body>
 </html>
