--- a/knockout/index.html
+++ b/knockout/index.html
@@ -136,7 +136,7 @@
 <script src="https://code.jquery.com/jquery.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="../js/bootstrap.min.js"></script>
-<script src="knockout-3.1.0.js"></script>
+<script src="knockout.js"></script>
 
 <script src="modules/app.js"></script>
 <script src="modules/wiki.js"></script>
