--- a/mithril/index2.html
+++ b/mithril/index2.html
@@ -27,10 +27,10 @@
 <script src="https://code.jquery.com/jquery.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="../js/bootstrap.min.js"></script>
-<script src="lib/knockout-3.1.0.js"></script>
+<script src="lib/knockout.js"></script>
 <script src="lib/mithril.js"></script>
 <script src="header/viewmodel.js"></script>
-<script src="logs/logs.js"></script>
+<script src="logs/controller.js"></script>
 <script src="wiki/viewmodel.js"></script>
 <script src="comments/viewmodel.js"></script>
 
