--- a/mithril/header/template.html
+++ b/mithril/header/template.html
@@ -8,7 +8,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li>You are logged in as <span data-bind="text: appInfo().appUser"> </span> </li>
             </ul>
-        </div><!-- /.navbar-collapse -->
+        </div>
     </div>
 </nav>
 <div class="jumbotron app-jumbotron">
